tinyc/test/good/ptr-assign-cast-int.c
int main()
{
    int *p;
    p = ( int * ) 0xf000u;

    return 0;
}
