tinyc/test/bad/ptr-arith-compound-assignment-times.c
int main()
{
    int *p;
    p *= p;
    return 0;
}
